Food section is almost done

--- a/pages/things-to-do.html
+++ b/pages/things-to-do.html
@@ -56,81 +56,119 @@
 		</div>
 
 		<div class="container" style="margin-bottom: 2rem;">
-			<h2>Places to Eat</h2>
-			<div class="row-of-cards">
-				<div class="card">
-					<div class="ribbon">
-						<span class="breakfastRibbon">Breakfast</span>
-					</div>
-					<img src="/assets/images/things_to_do/coffee.webp" class="main-image">
-					<div class="overlay" style="margin:0 auto;">
-						<img src="/assets/images/things_to_do/cafe_michelena.webp" alt="..." class="card-image" style="width:100%; height:auto;">
+			<h2 class="wow animate__animated animate__fadeInDown" data-wow-offset="300">Places to Eat</h2>
+			<div class="row row-cols-1 row-cols-xl-2">
 
-						<div class="overlay-card-text">
-							<h5 style="margin:0; padding:0 1rem;">Cafe Michelena</h5>
-							<p style="margin: 0; padding:0 1rem;">
-								A charming little cafe that offers coffee, bread, muffins, and standard breakfast and lunch menus along with either indoor or outdoor seating.
-							</p>
-							<p style="margin:0; padding:0 1rem;"><a href="https://goo.gl/maps/dyiZ3SoymMzgfvs46" target="_blank" rel="noopener noreferrer">Get Directions</a></p>
+				<div class="col d-flex align-items-stretch">
+					<div class="card mb-3 wow animate__animated animate__fadeIn" data-wow-offset="300" style="border-color: transparent; box-shadow: 0 0 1rem #696969; max-width: 540px;">
+						<div class="ribbon">
+							<span class="breakfastRibbon">Breakfast</span>
+						</div>
+						<div class="row no-gutters">
+						  <div class="col-md-5">
+							<img src="/assets/images/things_to_do/coffee.webp" class="card-img" alt="...">
+						  </div>
+						  <div class="col-md-7">
+							<div class="card-body">
+							  <h5 class="card-title">Cafe Michelena</h5>
+							  <p class="card-text">A charming little cafe that offers coffee, bread, muffins, and standard breakfast and lunch menus along with either indoor or outdoor seating.</p>
+							  <p class="card-text"><small class="text-muted"><a href="https://goo.gl/maps/dyiZ3SoymMzgfvs46" target="_blank" rel="noopener noreferrer">Get Directions</a></small></p>
+							</div>
+						  </div>
 						</div>
 					</div>
 				</div>
 
-				<div class="card">
-					<div class="ribbon">
-						<span class="lunchDinnerRibbon">Lunch / Dinner</span>
-					</div>
-					<img src="/assets/images/things_to_do/carnitas.webp" class="main-image">
-					<div class="overlay" style="margin:0 auto;">
-						<img src="/assets/images/things_to_do/don_pepes.webp" alt="..." class="card-image" style="width:100%; height:auto;">
-
-						<div class="overlay-card-text">
-							<h5 style="margin:0; padding:0 1rem;">Carnitas Don Pepe</h5>
-							<p style="margin: 0; padding:0 1rem;">Fantastic carnitas served with tortillas, beans, jalapenos, guacamole, and salsa.</p>
-							<p style="margin:0; padding:0 1rem;"><a href="https://goo.gl/maps/nLUzyCfVyCduYuix8" target="_blank" rel="noopener noreferrer">Get Directions</a></p>
+				<div class="col d-flex align-items-stretch">
+					<div class="card mb-3 wow animate__animated animate__fadeIn" data-wow-offset="300" style="border-color: transparent; box-shadow: 0 0 1rem #696969; max-width: 540px;">
+						<div class="ribbon">
+							<span class="allDayRibbon">Lunch / Dinner</span>
+						</div>
+						<div class="row no-gutters">
+						  <div class="col-md-5">
+							<img src="/assets/images/things_to_do/carnitas.webp" class="card-img" alt="...">
+						  </div>
+						  <div class="col-md-7">
+							<div class="card-body">
+							  <h5 class="card-title">Carnitas Don Pepe</h5>
+							  <p class="card-text">Fantastic carnitas served with tortillas, beans, jalapenos, guacamole, and salsa.</p>
+							  <p class="card-text"><small class="text-muted"><a href="https://goo.gl/maps/nLUzyCfVyCduYuix8" target="_blank" rel="noopener noreferrer">Get Directions</a></small></p>
+							  <p class="card-text"><small class="text-muted"><a href="/assets/images/things_to_do/don_pepe.webp" target="_blank" rel="noopener noreferrer">Photo of the store-front</a></small></p>
+							</div>
+						  </div>
 						</div>
 					</div>
 				</div>
 
-				<div class="card">
-					<div class="ribbon">
-						<span class="dinnerRibbon">Dinner</span>
-					</div>
-					<img src="/assets/images/things_to_do/taqueria_2.webp" class="main-image">
-					<div class="overlay" style="margin:0 auto;">
-						<img src="/assets/images/things_to_do/taqueria_1.webp" alt="..." class="card-image" style="width:100%; height:auto;">
-
-						<div class="overlay-card-text">
-							<h5 style="margin:0; padding:0 1rem;">Taquería Cuautla</h5>
-							<p style="margin: 0; padding:0 1rem;">Our favorite taco spot in the city that serves delicious tacos with carne asada, al pastor, lengua, and our favorite - chorizo.</p>
-							<p style="margin:0; padding:0 1rem;"><a href="https://goo.gl/maps/5LsCEvtLdyde2N7X7" target="_blank" rel="noopener noreferrer">Get Directions</a></p>
+				<div class="col d-flex align-items-stretch">
+					<div class="card mb-3 wow animate__animated animate__fadeIn" data-wow-offset="300" style="border-color: transparent; box-shadow: 0 0 1rem #696969; max-width: 540px;">
+						<div class="ribbon">
+							<span class="allDayRibbon">All Day</span>
+						</div>
+						<div class="row no-gutters">
+						  <div class="col-md-5">
+							<picture>
+								<source srcset="/assets/images/things_to_do/la_soledad_vertical.webp" media="(min-width: 768px)"/>
+								<img src="/assets/images/things_to_do/la_soledad_restaurant.webp" alt="example" style="width:100%;"/>
+							  </picture>
+						  </div>
+						  <div class="col-md-7">
+							<div class="card-body">
+							  <h5 class="card-title">Hotel de la Soledad</h5>
+							  <p class="card-text">Top notch restaurant with peaceful and serene outdoor dining. We recommenend stopping by for breakfast.</p>
+							  <p class="card-text"><small class="text-muted"><a href="https://goo.gl/maps/qJvDYymNMzG4qcu36" target="_blank" rel="noopener noreferrer">Get Directions</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://hoteldelasoledad.com/restaurante.php" target="_blank" rel="noopener noreferrer">Restaurant Website</a></small></p>
+							  <p class="card-text"><small class="text-muted"><a href="/assets/videos/la_soledad.mp4" target="_blank" rel="noopener noreferrer">Video of the outdoor area</a></small></p>
+							</div>
+						  </div>
 						</div>
 					</div>
 				</div>
 
-				<div class="card">
-					<div class="ribbon">
-						<span class="breakfastRibbon">Breakfast</span>
-					</div>
-					<video width="100%" height="auto" style="border-radius:2rem; max-width:19rem;" autoplay muted  loop controls>
-						<source src="/assets/videos/la_soledad.mp4" type="video/mp4">
-					  	Your browser does not support the video tag.
-					</video> 
-
-					<div class="overlay-video" style="margin:0 auto;">
-						<img src="/assets/images/things_to_do/la_soledad_restaurant.webp" alt="..." class="card-image" style="width:100%; height:auto;">
-
-						<div class="overlay-card-text" style="justify-content:center;">
-							<h5 style="margin:0; padding:0 1rem;">Hotel de la Soledad</h5>
-							<p style="margin: 0; padding:0 1rem;">Top notch restaurant with peaceful and serene outdoor dining.</p>
-							<p style="margin:0; padding:0 1rem;"><a href="https://goo.gl/maps/qJvDYymNMzG4qcu36" target="_blank" rel="noopener noreferrer">Get Directions</a></p>
-							<p style="margin:0; padding:0 1rem;"><a href="https://hoteldelasoledad.com/restaurante.php" target="_blank" rel="noopener noreferrer">Restaurant Website</a></p>
+				<div class="col d-flex align-items-stretch">
+					<div class="card mb-3 wow animate__animated animate__fadeIn" data-wow-offset="300" style="border-color: transparent; box-shadow: 0 0 1rem #696969; max-width: 540px;">
+						<div class="ribbon">
+							<span class="allDayRibbon">All Day</span>
+						</div>
+						<div class="row no-gutters">
+						  <div class="col-md-5">
+							<img src="/assets/images/things_to_do/los_juaninos_cover.webp" class="card-img" alt="...">
+						  </div>
+						  <div class="col-md-7">
+							<div class="card-body">
+							  <h5 class="card-title">Hotel Los Juaninos</h5>
+							  <p class="card-text">Rooftop restaurant that offers a magnificent view of the cathedral. Offers indoor or outdoor seating.</p>
+							  <p class="card-text"><small class="text-muted"><a href="https://goo.gl/maps/5LsCEvtLdyde2N7X7" target="_blank" rel="noopener noreferrer">Get Directions</a></small></p>
+							  <p class="card-text"><small class="text-muted"><a href="https://hoteljuaninos.com.mx/la-azotea.php" target="_blank" rel="noopener noreferrer">Restaurant Website</a></small></p>
+							</div>
+						  </div>
 						</div>
 					</div>
 				</div>
+
+				<div class="col d-flex align-items-stretch">
+					<div class="card mb-3 wow animate__animated animate__fadeIn" data-wow-offset="300" style="border-color: transparent; box-shadow: 0 0 1rem #696969; max-width: 540px;">
+						<div class="ribbon">
+							<span class="dinnerRibbon">Dinner</span>
+						</div>
+						<div class="row no-gutters">
+						  <div class="col-md-5">
+							<img src="/assets/images/things_to_do/taqueria_2.webp" class="card-img" alt="...">
+						  </div>
+						  <div class="col-md-7">
+							<div class="card-body">
+							  <h5 class="card-title">Taquería Cuautla</h5>
+							  <p class="card-text">Our favorite taco spot in the city that serves delicious tacos with carne asada, al pastor, lengua, and our favorite - chorizo.</p>
+							  <p class="card-text"><small class="text-muted"><a href="https://goo.gl/maps/5LsCEvtLdyde2N7X7" target="_blank" rel="noopener noreferrer">Get Directions</a></small></p>
+							  <p class="card-text"><small class="text-muted"><a href="/assets/images/things_to_do/taqueria_1.webp" target="_blank" rel="noopener noreferrer">Photo of the store-front</a></small></p>
+							</div>
+						  </div>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>	
-		
+
 		<!-- Footer -->
 		<Footer class="container-fluid footer">
 			<h3 id="footer-header">Get in touch</h3>
@@ -149,6 +187,7 @@
 		<!-- Custom JavaScript -->
 		<script src="/javascript/food/language-database-food-menu.js"></script>
 		<script src="/javascript/food/switch-languages-food-menu.js"></script>
+		<script src="/javascript/displayOverlay.js"></script>
 
 		<!-- WOW JavaScript -->
         <script> new WOW().init();</script>
