Added seating-chart page, removed RSVP button

--- a/index.html
+++ b/index.html
@@ -110,18 +110,14 @@
 				<div class="jumbotron-header">
 					<h1 class="jumbotron-h1 rsvpTitle animate__animated animate__fadeInDown animate__delay-2s">Marilynn & Ivan's Wedding</h1>
 					
-					<a
-						href="http://ortizmurowedding.rsvpify.com"
+					<!-- <a
+						href="/pages//seating-chart.html"
 						target="_blank"
 						rel="noopener noreferrer">
 						<button class="rsvp-button jumbotron-rsvp animate__animated animate__fadeInDown animate__delay-2s">
-							<img
-								class="invitation-image"
-								src="/assets/images/jumbotron/wedding-card.svg"
-								alt="invitation"
-							/>RSVP
+							Find Your Seat
 						</button>
-					</a>
+					</a> -->
 				</div>
 			</div>
 
@@ -130,7 +126,7 @@
 					<span class="rsvpDate">Friday, July 30, 2021</span>
 					<br>
 					<span>Morelia, Michoacán, México</span>
-					<p class="rsvpDeadline">The RSVP list will close on Sunday, July 4</p>
+					<p class="rsvpDeadline">Thank you to everyone who RSVP'd! Seating chart coming soon.</p>
 				</div>
 			</div>
 
